<resources>
    <string name="app_name">KSocial</string>
    <string name="prompt_email">* Login</string>
    <string name="prompt_password">* Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register_short">Register</string>
    <string name="error_invalid_email">This login  is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing emailcompletions."</string>
    <string name="intro">Intro</string>
    <string name="registerText"><![CDATA[ New to KSocial? Register now]]></string>
    <string name="appFont">sans-serif-condensed</string>
    <string name="registerButtonText">Register</string>
    <string name="confirmPassword">* Confirm Password</string>
    <string name="not_equals_error">Passwords does not match</string>
    <string name="randomChatText">Make random chat</string>
    <string name="successRegistration">Registration succeeded</string>
    <string name="successRegistrationMessage">Now you can login to you account</string>
    <string name="errorLogin">Error while logging you in</string>
    <string name="errorLoginMessage">An error occurred while login you to server,please check your credentials.(Password is case-sensitive)</string>
    <string name="emptyPasswordError">Password can not be empty</string>
    <string name="emptyLoginError">Login can not be empty</string>
    <string name="title_activity_home">Feeds</string>
    <string name="quoteOpen">❝ \u0020</string>
    <string name="quoteClose">\u0020 ❞</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="makePostString">New Post</string>
    <string name="messageText">Messages</string>
    <string name="profileText">Profile</string>
    <string name="feedText">Feed</string>
    <string name="groupsText">Groups</string>
    <string name="friendsText">Friends</string>
    <string name="settingsString">Settings</string>
    <string name="logoutString">Logout</string>
    <string name="serverErrorText">There was an problem with server.Please try again</string>
    <string name="noFirstname">No First Name</string>
    <string name="noLastname">No Last Name</string>
    <string name="noPhone">No Phone Number</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="loadingText">Loading...</string>
    <string name="singleUserErrorTile">Error while fetching data</string>
    <string name="singleUserErrorMessage">There was an error while fetching the information of the user.Please try again and be sure you have active internet connection.</string>
    <string name="noGender">No gender specified</string>
    <string name="noFacebook">Facebook is not attached</string>
    <string name="noSkype">Skype is not attached</string>
    <string name="noAddress">No address is specified</string>
    <string name="noRelationship">Relationship is not specified</string>
    <string name="sendMessage">Send message</string>
    <string name="blockUser">Block</string>
    <string name="noFriendsAvailable">You dont have any friends</string>
    <string name="writeMessageHint">Write a message</string>
    <string name="writing">Writing...</string>
    <string name="serverErrorTitle">Error while connecting to server...</string>
    <string name="noMessageText">Once you start a conversation,\nyou\'ll see it listed here</string>
    <string name="sendingNowText">Sending now...</string>
    <string name="sentText">Sent</string>
    <string name="reply">Reply</string>
    <string name="loggedOutText">Logged out</string>
    <string name="replyMessageHint">Reply</string>
    <string name="promptFirstName">* First name</string>
    <string name="promptLastName">* Last name</string>
    <string name="errorFirstName">First name should be specified</string>
    <string name="errorLastName">Last name should be specified</string>
    <string name="loginText">Login</string>
    <string name="passwordText">Password</string>
    <string name="editProfile">Edit</string>
    <string name="noStatusText">Write a status...</string>
    <string name="saveText">Save</string>
    <string name="myProfileText">My Profile</string>
    <string name="addAddress">Add address</string>
    <string name="addPhoneNumber">Add phone number</string>
    <string name="addRelationship">Add your relationship</string>
    <string name="addGender">Specify your gender</string>
    <string name="addFacebook">Attach your facebook profile</string>
    <string name="addYourSkype">Add your skype</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="checkCorrectness">Please check for correctness</string>
    <string name="correctnessDetailViewText">
\nStatus : %1$s
\n\nFirst Name : %2$s
\n\nLast Name : %3$s
\n\nAddress : %4$s
\n\nPhone Number : %5$s
\n\nRelationship : %6$s
\n\nGender : %7$s
\n\nFacebook : %8$s
\n\nSkype : %9$s

\n\nAre those correct?
</string>
    <string name="changeImage">Change image</string>
    <string name="changeName">Change name</string>
    <string name="cancel">Cancel</string>
    <string name="shortNoStatus">No status</string>
    <string name="femaleGender">Female</string>
    <string name="maleGender">Male</string>
    <string name="single">Single</string>
    <string name="inRelationship">In a relationship</string>
    <string name="engaged">Engaged</string>
    <string name="married">Married</string>
    <string name="complicated">It\'s complicated</string>
    <string name="openRelationship">In an open relationship</string>
    <string name="divorced">Divorced</string>
    <string name="facebook_app_id">1713388275578207</string>
    <string name="cantRead">Can\'t load without permission...</string>
    <string name="selectImage">Select image</string>
    <string name="notSupported">Not supported</string>
    <string name="notSupportedText">This image is not supported.Please select image from galler and not from other sources</string>
    <string name="waitTillLoad">Please wait till load...</string>
    <string name="noStatusWritten">No status was written</string>
    <string name="error">Error</string>
    <string name="couldNotUpdate">Could not update your data.Please try again later.If you continue to have this issue,contact support team.</string>
    <string name="updating">Updating your account...</string>
    <string name="saved">Updates saved</string>
    <string name="openingFacebook">Opening facebook...</string>
    <string name="openingGoogle">Openning google maps...</string>
    <string name="myMessages">Messages</string>
    <string name="chooseAction">Choose Action</string>
    <string name="dismiss">Dismiss</string>
    <string name="viewProfile">View Profile</string>
    <string name="deleteMessage">Delete Message</string>
    <string name="areYouSure">Are you sure?</string>
    <string name="deleteingMessage">Deleting message...</string>
    <string name="messageDeleted">Message was deleted</string>
    <string name="somethingWentWrong">Something went wrong.Try again...</string>
    <string name="discardChanges">Discard changes</string>
    <string name="discardChangesQuestion">Do you want to discard changes you have made?</string>
    <string name="googleMapsApiKey">AIzaSyBqlJvjYxAxLHSuxQ-IClVFe29EyJ-MpA4</string>
    <string name="selectLocation">Select your location (Hint: Click on desired place to attach)</string>
    <string name="openingMap">Opening map...</string>
    <string name="permissionsRequired">Permissions are required to show your location</string>
    <string name="generalPermissionsNotGranted">All of permissions not granted.Uploading will not work</string>
    <string name="addresNotAvailable">Could not get address name</string>
    <string name="nothingChosen">Nothing was chosen</string>
    <string name="writePost">Write a post...</string>
    <string name="writeSomething">Write something...</string>
    <string name="fieldEmptyError">Nothing was written</string>
    <string name="attachUrl">Paste URL here</string>
    <string name="attach">Attach</string>
    <string name="attachUrlTitle">Attach URL</string>
    <string name="attachUrlError">You should input something</string>
    <string name="urlIsNotValid">URL is not valid...</string>
    <string name="storagePermissions">Storage permissions are required </string>
    <string name="sizeExceeded">File size exceeded</string>
    <string name="sizeExceededMessage">You have exceeded the maximum size of file which is 20MB.Please reduce the file size and try again.</string>
    <string name="fileError">File error</string>
    <string name="couldNotReadFile">Could not read the file.If you are using custom explore.Please navigate through default one and try again</string>
    <string name="addedAttachment">Added Attachment</string>
    <string name="addedAddress">Added address</string>
    <string name="posting">Posting...</string>
    <string name="postingYourShare">Posting your share.Please wait...</string>
    <string name="success">Success!</string>
    <string name="posted">Your share was posted successfully</string>
    <string name="chatRoulette">Random Chat</string>
    <string name="addGroupName">Add a group name</string>
    <string name="addGroupHint">E.x Family</string>
    <string name="addGroupDescription">Add a group description</string>
    <string name="addGroupDescriptionHint">E.x All club members can join this group</string>
    <string name="pickColorButton">Pick a background color</string>
    <string name="noBackgroundColorSelected">No background color selected</string>
    <string name="noImageSelected">No image selected</string>
    <string name="pickImage">Pick a group image</string>
    <string name="search_title">Search</string>
    <string name="close">Close</string>
    <string name="shopTitle">Shop</string>
    <string name="musicSearhHint">Search music</string>
    <string name="searchMusicTitle">Search music by name,album or track</string>
    <string name="noAccount">You do not have any accounts attached.You can attach and come back,or you can specify desired e-mail below</string>
    <string name="enterEmail">Enter e-mail</string>
    <string name="notificationTitle">Notifications</string>
    <string name="accepting">Accepting</string>
    <string name="smash_player_text">Smash %1$s Player! </string>
    <string name="score_text">Score:%1$d</string>
    <string name="done_text">Done</string>
    <string name="newsTitle">News And Trends</string>
    <string name="condensedFont">sans-serif-condensed</string>
    <string name="doIt">Do It</string>
    <string name="stickerShop">Sticker Shop</string>
    <string name="badgeShop">Badge Shop</string>
    <string name="roomName">Room name</string>
    <string name="enterRoomName">Pick desired room name</string>
    <string name="fieldsMandatory">* All fields are mandatory</string>
    <string name="pickLanguage">Room language</string>
    <string name="gameType">Game type</string>
    <string name="morningDuration">Single Morning duration</string>
    <string name="nightDuration">Single Night duration</string>
    <string name="enterDuration">Enter duration</string>
    <string name="chooseMorningFirst">Choose the morning duration first to see the estimated night duration</string>
    <string name="maxPlayers">Max players : %1$d</string>
    <string name="yakudzaNotAvailable">* The \'Yakudza\' game type is not available yet and will be available soon</string>
</resources>