<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/news"
        android:icon="@drawable/whats_trending_white_vector"
        android:orderInCategory="1"
        android:title="@string/newsTitle"
        app:showAsAction="always" />
    <item
        android:id="@+id/notifications"
        android:icon="@drawable/notification_icon"
        android:orderInCategory="2"
        android:title="@string/notificationTitle"
        app:showAsAction="always" />


    <item
        android:id="@+id/shop"
        android:icon="@drawable/shop_icon"
        android:orderInCategory="3"
        android:title="@string/shopTitle"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/stickerShop"
                android:title="@string/stickerShop" />
            <item
                android:id="@+id/badgeShop"
                android:title="@string/badgeShop" />
        </menu>
    </item>
</menu>
