<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nestedScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/defaultGroupColor"
    android:fadeScrollbars="false"
    android:scrollbarAlwaysDrawHorizontalTrack="true"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    android:scrollbarFadeDuration="0">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:fontFamily="@string/appFont"
            android:text="@string/addGroupName"
            android:textColor="@color/vk_white" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColorHint="#ffffff">

            <EditText
                android:id="@+id/groupName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/addGroupHint"
                android:textColor="@color/vk_white" />
        </android.support.design.widget.TextInputLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:fontFamily="@string/appFont"
            android:text="@string/addGroupDescription"
            android:textColor="@color/vk_white" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColorHint="#ffffff">

            <EditText
                android:id="@+id/groupDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/addGroupDescriptionHint"
                android:textColor="@color/vk_white" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/pickerText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:fontFamily="@string/appFont"
            android:text="@string/noBackgroundColorSelected"
            android:textColor="@color/vk_white" />

        <Button
            android:id="@+id/pickBackgroundColor"
            style="?attr/selectableItemBackground"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/group_buttons"
            android:padding="10dp"
            android:text="@string/pickColorButton"
            android:textAllCaps="false"
            android:textColor="#000000" />


        <ImageView
            android:id="@+id/groupImage"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/user_image_placeholder" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:fontFamily="@string/appFont"
            android:text="@string/noImageSelected"
            android:textColor="@color/vk_white" />

        <Button
            android:id="@+id/pickImage"
            style="?attr/selectableItemBackground"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/group_buttons"
            android:padding="10dp"
            android:text="@string/pickImage"
            android:textAllCaps="false"
            android:textColor="#000000" />

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>