<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/addRoomScroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@string/condensedFont"
            android:text="@string/fieldsMandatory"
            android:textStyle="italic" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@string/condensedFont"
            android:text="@string/yakudzaNotAvailable"
            android:textStyle="italic" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@string/condensedFont"
            android:text="@string/roomName" />

        <EditText
            android:id="@+id/roomNameTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:fontFamily="@string/condensedFont"
            android:hint="@string/enterRoomName"
            android:maxLines="1"
            android:textColor="@color/vk_black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@string/condensedFont"
            android:text="@string/pickLanguage" />

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/languageSpinner"
            style="@style/Widget.AppCompat.Spinner.Underlined"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/topDivider"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@string/condensedFont">

        </android.support.v7.widget.AppCompatSpinner>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@string/condensedFont"
            android:text="@string/gameType" />

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/gameTypeSpinner"
            style="@style/Widget.AppCompat.Spinner.Underlined"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/topDivider"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@string/condensedFont">

        </android.support.v7.widget.AppCompatSpinner>

        <TextView
            android:id="@+id/maxPlayersTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@string/condensedFont"
            android:text="@string/maxPlayers"
            android:textColor="@color/vk_black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@string/condensedFont"
            android:text="@string/morningDuration" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <View
                android:id="@+id/centerDivider"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_centerInParent="true">

            </View>

            <EditText
                android:id="@+id/durationMorningED"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_toLeftOf="@+id/centerDivider"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:fontFamily="@string/condensedFont"
                android:hint="@string/enterDuration"
                android:inputType="number" />

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/gameMorningDurationSpinner"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/durationMorningED"
                android:layout_alignTop="@+id/durationMorningED"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/centerDivider"
                android:fontFamily="@string/condensedFont">

            </android.support.v7.widget.AppCompatSpinner>

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@string/condensedFont"
            android:text="@string/nightDuration" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/nightDurationTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="15dp"
                android:fontFamily="@string/condensedFont"
                android:text="@string/chooseMorningFirst"
                android:textColor="@color/vk_black" />
        </RelativeLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/saveAddRoom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginBottom="40dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/com_adobe_image_ok_mark" />
    </LinearLayout>

</ScrollView>