<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/searchRootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/closeSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        android:padding="16dp"
        android:src="@drawable/close_vector_grey" />

    <TextView
        android:id="@+id/titleHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/closeSearch"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:fontFamily="@string/appFont"
        android:text="@string/searchMusicTitle"
        android:textColor="#000000" />

    <AutoCompleteTextView
        android:id="@+id/searchField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titleHint"
        android:layout_margin="16dp"
        android:hint="@string/musicSearhHint" />

    <Button
        android:id="@+id/searchButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/searchField"
        android:layout_margin="16dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/search_button"
        android:text="@string/search_title"
        android:textAllCaps="false"
        android:textColor="#ffffff" />
</RelativeLayout>