<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/warningText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_margin="16dp"
        android:layout_toLeftOf="@+id/warningButton"
        android:fontFamily="@string/appFont"
        android:text="@string/loadingText"
        android:textColor="#000000" />

    <Button
        android:id="@+id/warningButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/circle_transparent_background"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        android:text="@string/accepting"
        android:textColor="@color/colorPrimary" />
</RelativeLayout>