<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragmentDialogRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/hidden_profile_background">

    <ProgressBar
        android:id="@+id/progress"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_above="@+id/doIt"
        android:layout_marginBottom="10dp"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/secondParagraphTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_margin="10dp"
                android:fontFamily="@string/condensedFont"
                android:gravity="center"
                android:text="@string/loadingText"
                android:textColor="@android:color/holo_orange_dark" />

            <TextView
                android:id="@+id/firstParagraphTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/secondParagraphTV"
                android:layout_margin="10dp"
                android:fontFamily="@string/appFont"
                android:gravity="center"
                android:text="@string/loadingText"
                android:textColor="@color/vk_white" />


        </RelativeLayout>
    </ScrollView>


    <Button
        android:id="@+id/doIt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/close"
        android:layout_marginBottom="10dp"
        android:background="@color/colorPrimary"
        android:fontFamily="@string/appFont"
        android:text="@string/doIt"
        android:textColor="@color/vk_white" />

    <Button
        android:id="@+id/close"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        android:fontFamily="@string/appFont"
        android:text="@string/close"
        android:textColor="@color/vk_white" />

</RelativeLayout>